# clownmdemu-frontend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  audio-device.cpp  audio-device.h  audio-output.cpp  audio-output.h  audio.cpp  audio.h  audio_output.cpp  audio_output.h  cd-reader.cpp  cd-reader.h  clownmdemu-frontend.rc  clownmdemu.cpp  clownmdemu.h  colour.h  common.cpp  common.h  debug-cpu-common.h  debug-cpu-m68k.cpp  debug-cpu-m68k.h  debug-cpu-z80.cpp  debug-cpu-z80.h  debug-cpu.cpp  debug-cpu.h  debug-cpu.ui  debug-fm.cpp  debug-fm.h  debug-frontend.cpp  debug-frontend.h  debug-log.cpp  debug-log.h  debug-m68k.cpp  debug-m68k.h  debug-memory.cpp  debug-memory.h  debug-pcm.cpp  debug-pcm.h  (+72 more)
assets/: clownmdemu-frontend.desktop  clownmdemu-frontend.rc  com.clownacy.clownmdemu.appdata.xml  com.clownacy.clownmdemu.desktop  make-archive.sh
assets/font/: generate.sh
assets/gamecontrollerdb/: archive.tar.lzma.h  generate.sh
assets/icon/: archive.tar.lzma.h  generate.sh
libraries/doubly-linked-list/: doubly-linked-list.c
licences/: clownmdemu.h  dear-imgui-text-select.h  dear-imgui-text-select.txt  dear-imgui.h  dear-imgui.txt  emscripten-browser-file.h  freetype-bdf.h  freetype-bdf.txt  freetype-ft-hb.h  freetype-ft-hb.txt  freetype-fthash.h  freetype-fthash.txt  freetype-pcf.h  freetype-pcf.txt  freetype.h  freetype.txt  inconsolata.h  inconsolata.txt  inih.h  inih.txt  karla.h  karla.txt  libchdr.h  libchdr.txt  libretro-common.h  libretro-common.txt  miniz.h  miniz.txt  noto-sans.h  zstd.h
licences/converter/: .gitignore  CMakeLists.txt  main.c
qt/: .gitignore  CMakeLists.txt  about.cpp  about.h  about.ui  allocated-dialog.h  colour.h  debug-cpu-common.cpp  debug-cpu-common.h  debug-cpu-m68k.cpp  debug-cpu-m68k.h  debug-cpu-z80.cpp  debug-cpu-z80.h  debug-cpu.cpp  debug-cpu.h  debug-cpu.ui  emulator-widget.cpp  emulator-widget.h  emulator.cpp  emulator.h  fragment.glsl  main-window.cpp  main-window.h  main-window.ui  main.cpp  message-box.h  options.cpp  options.h  options.ui  paste.h  qt-extensions.h  vertex.glsl
qt/dialogs/: about.cpp  about.h  about.ui  common.h  debug-cpu.cpp  debug-cpu.h  debug-toggles.cpp  debug-toggles.h  debug-toggles.ui  options.cpp  options.h  options.ui
qt/dialogs/widgets/: debug-cpu-common.cpp  debug-cpu-common.h  debug-cpu-m68k.cpp  debug-cpu-m68k.h  debug-cpu-z80.cpp  debug-cpu-z80.h  emulator.cpp  emulator.h
qt/widgets/: debug-cpu-common.h  debug-cpu-m68k.cpp  debug-cpu-m68k.h  debug-cpu-z80.cpp  debug-cpu-z80.h  emulator.cpp  emulator.h
scripts/AppImage/: .gitignore  makeAppImage.sh
source/: audio-device.cpp  audio-device.h  audio-output.cpp  audio-output.h  cd-reader.cpp  cd-reader.h  debug-log.cpp  debug-log.h  emulator-extended.h  emulator-instance.cpp  emulator-instance.h  file-utilities.cpp  file-utilities.h  frontend.cpp  frontend.h  input.cpp  input.h  main.cpp  raii-wrapper.h  sdl-wrapper-extra.h  sdl-wrapper.h  tar.cpp  tar.h  text-encoding.cpp  text-encoding.h  version.h  vgm-logger.cpp  vgm-logger.h
source/windows/: about.cpp  about.h  cheats.cpp  cheats.h  debug-cdc.cpp  debug-cdc.h  debug-cdda.cpp  debug-cdda.h  debug-fm.cpp  debug-frontend.cpp  debug-log-viewer.cpp  debug-log-viewer.h  debug-m68k.cpp  debug-m68k.h  debug-memory.cpp  debug-memory.h  debug-other.cpp  debug-other.h  debug-pcm.cpp  debug-psg.cpp  debug-psg.h  debug-toggles.cpp  debug-toggles.h  debug-vdp.cpp  debug-vdp.h  debug-z80.cpp  debug-z80.h  disassembler.cpp  disassembler.h
source/windows/common/: compressed-fonts.h  winapi.cpp  window-with-dear-imgui.cpp  window-with-dear-imgui.h  window-with-framebuffer.cpp  window-with-framebuffer.h  window.cpp  window.h
windows/: cheats.cpp  cheats.h  debug-fm.cpp  debug-fm.h  debug-frontend.cpp  debug-frontend.h  debug-log-viewer.cpp  debug-log-viewer.h  debug-m68k.cpp  debug-m68k.h  debug-memory.cpp  debug-memory.h  debug-pcm.cpp  debug-pcm.h  debug-psg.cpp  debug-vdp.cpp  debug-vdp.h  debug-z80.cpp  disassembler.cpp  disassembler.h
windows/common/: inconsolata-regular.h  noto-sans-regular.h  winapi.c  winapi.cpp  winapi.h  window-popup.h  window-with-dear-imgui.cpp  window-with-dear-imgui.h  window-with-framebuffer.cpp  window-with-framebuffer.h  window.cpp  window.h
